# py4conjoint

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/py4conjoint/: __init__.py
